<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">UEE</string>
    <string name="login">Login</string>
    <string name="patient">Patient</string>
    <string name="caregiver">Caregiver</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="bog">Bog</string>
    <string name="ratings_7">Ratings (7)</string>
    <string name="age_32">Age: 32</string>
    <string name="_5_years_experience">5+ years experience</string>
    <string name="colombo">Colombo</string>
    <string name="request">Request</string>
    <string name="about">About</string>
    <string name="about_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="per_hour">per hour</string>
    <string name="short_notice">Short Notice</string>
    <string name="short_notice_care">Short notice care</string>
    <string name="overnight">Overnight</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="rs2000">Rs2000</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="rs">Rs</string>
    <string name="rs2000perhour">Rs2000 per hour</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">qn9qaa4dcc87</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="hourly_rate">Hourly rate</string>
    <string name="short_notice_hourly_rate">Short notice hourly rate</string>
    <string name="sleeping">Sleeping</string>
    <string name="waking">Waking</string>
    <string name="live_in">Live-In</string>
    <string name="part_time">Part time</string>
    <string name="full_time">Full time</string>
    <string name="done">Done</string>
    <string name="message">Message</string>
    <string name="name_">Name :</string>
    <string name="space_extraLarge">                                                      </string>
    <string name="space_large">                               </string>
    <string name="space_medium">                        </string>
    <string name="space_small">              </string>

    <string name="btnLoginInitiTxt">LOGIN</string>
    <string name="btnSignUpInitiTxt">SIGN UP</string>
    <string name="appName">SerenityCare</string>
</resources>