<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CaregiverRegister3Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hourlyRateLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hourly_rate"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:endIconDrawable="@drawable/ic_cancel"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:prefixText="@string/rs"
            app:suffixText="@string/per_hour">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shortNoticeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/short_notice_hourly_rate"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:endIconDrawable="@drawable/ic_cancel"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:prefixText="@string/rs"
            app:suffixText="@string/per_hour">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overnight"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sleepingLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sleeping"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:endIconDrawable="@drawable/ic_cancel"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:prefixText="@string/rs">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wakingLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/waking"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:endIconDrawable="@drawable/ic_cancel"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:prefixText="@string/rs">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_in"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/partTimeLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/part_time"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:endIconDrawable="@drawable/ic_cancel"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:prefixText="@string/rs">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullTimeLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/full_time"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:endIconDrawable="@drawable/ic_cancel"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:prefixText="@string/rs">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnDone"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:text="@string/done"
            android:textColor="@color/black"
            app:cornerRadius="100dp"
            app:icon="@drawable/ic_done"
            app:strokeColor="@color/stream_ui_black" />

    </LinearLayout>


</FrameLayout>