<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CaregiverRegister2Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>
            
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:endIconDrawable="@drawable/ic_cancel"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:endIconDrawable="@drawable/ic_cancel"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:endIconDrawable="@drawable/ic_cancel"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:simpleItems="@array/districts" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:hint="@string/about"
                app:endIconDrawable="@drawable/ic_cancel"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine|textLongMessage"
                    android:lines="6"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnNext"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/next"
                android:textColor="@color/black"
                app:cornerRadius="100dp"
                app:icon="@drawable/ic_next"
                app:strokeColor="@color/stream_ui_black" />

        </LinearLayout>

    </ScrollView>
    
    
    

</FrameLayout>